collectd (5.2.0-1~debmon70+1) UNRELEASED; urgency=low

  * Rebuild for debmon-wheezy.

 -- Sebastian Harl <tokkee@debian.org>  Wed, 28 Nov 2012 12:37:29 +0100

collectd (5.2.0-1~debmon60+1) debmon-squeeze; urgency=low

  * Rebuild for debmon-squeeze.
  * debian/rules:
    - Re-enabled the netlink plugin (previously disabled for
      squeeze-backports); the plugin should now build with older and current
      versions of iproute2.
  Changes kept from squeeze-backports:
  * debian/rules, debian/control:
    - Disabled modbus plugin, libmodbus-dev is not available on Squeeze.
    - Disabled AMQP plugin, librabbitmq-dev is not available on Squeeze.
  * debian/rules, debian/collectd-core.overrides:
    - Changed JAVA_HOME to /usr/lib/jvm/java-6-openjdk (without arch).
  * debian/collectd.conf:
    - Removed sample config for the 'amqp' plugin.

 -- Sebastian Harl <tokkee@debian.org>  Wed, 28 Nov 2012 09:06:28 +0100

collectd (5.2.0-1) experimental; urgency=low

  * New upstream release:
    - ping plugin: Don't abort if ping_send fails but report an error only;
      thanks to Bernd Zeimetz for reporting this (Closes: #630683).
    - df plugin: Ignore "rootfs" file-system type to make sure that root
      file-system statistics are only collected once; thanks to Florian La
      Roche for reporting this (Closes: #657122).
    - Fixed parse errors when using (including) empty config files; thanks to
      Reinhard Tartler for reporting this (Closes: #592881).
    New plugins:
    - Aggregate multiple values lists into one: aggregation
    - Query statistics from BSD's packet filter: pf (FreeBSD only)
  * Uploading to experimental because of the Wheezy freeze.
  * debian/control, debian/rules:
    - Build-depend on kfreebsd-kernel-headers (kfreebsd-any only) and disable
      the 'pf' plugin on non-kfreebsd systems.
  * debian/patches:
    - Removed migrate-4-5-df.dpatch; merged upstream.
    - Removed rtnl_dump_filter.dpatch; merged upstream.