@@ -10,5 +10,5 @@ collectd-core: capitalization-error-in-description python Python
 # The "java" plugin uses libjvm.so which can only be found in a non-standard
 # directory. According to the Java guys the path name and the ABI is stable
 # though ...
-collectd-core: binary-or-shlib-defines-rpath usr/lib/collectd/java.so /usr/lib/jvm/java-6-openjdk/jre/lib/*
+collectd-core: binary-or-shlib-defines-rpath usr/lib/collectd/java.so /usr/lib/jvm/java-6-openjdk-*
 
