@@ -59,6 +59,7 @@ LoadPlugin syslog
 ##############################################################################
 
 #LoadPlugin aggregation
+#LoadPlugin amqp
 #LoadPlugin apache
 #LoadPlugin apcups
 #LoadPlugin ascent
@@ -173,6 +174,20 @@ LoadPlugin users
 #		CalculateMaximum false
 #		CalculateStddev false
 #	</Aggregation>
+#</Plugin>
+
+#<Plugin amqp>
+#	<Publish "name">
+#		Host "localhost"
+#		Port "5672"
+#		VHost "/"
+#		User "guest"
+#		Password "guest"
+#		Exchange "amq.fanout"
+#		RoutingKey "collectd"
+#		Persistent false
+#		StoreRates false
+#	</Publish>
 #</Plugin>
 
 #<Plugin apache>
